Math_42/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_42_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:45: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, 0.5, 30);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:56: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, 1.0E-12, 1386);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:76: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, 1.0, 31);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:133: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, (-1.0), 1396);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:145: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:158: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:170: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, 1990.236827772871, (-427));
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:171: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:183: error: cannot find symbol
      boolean boolean0 = simplexTableau0.isOptimal();
                                        ^
  symbol:   method isOptimal()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:194: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, (-3803.16400451996), (-460));
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:195: error: cannot find symbol
      boolean boolean0 = simplexTableau0.isOptimal();
                                        ^
  symbol:   method isOptimal()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:206: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, (-1.0), 1396);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:219: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, 1.0, 2441);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:346: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau1 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, 1.0E-12, 1170);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/0/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:376: error: cannot find symbol
      simplexTableau1.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau1 of type SimplexTableau
15 errors
